adding headings for c1,2,3 - phase narrative needs to added in

--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -10,6 +10,8 @@ number-sections: true
 categories: chapter
 title: 4. Exploration of the Formative Learning Design Process
 ---
+
+
 -   [Exploration of the Formative Learning Design
     Process](#exploration-of-the-formative-learning-design-process)
     -   [Research Questions - April
@@ -21,14 +23,17 @@ title: 4. Exploration of the Formative Learning Design Process
             design](#on-the-details-of-the-design)
         -   [Phases and resources of the
             study](#phases-and-resources-of-the-study)
-            -   [P1: Exploratory stage: Oct 2017 - Dec
-                2018](#p1-exploratory-stage-oct-2017---dec-2018)
-            -   [P3: Accelerated game making programme (5 weeks): Jan -
-                Feb
-                2019](#p3-accelerated-game-making-programme-5-weeks-jan---feb-2019)
+            -   [P1: A phase of exploratory, cocreative game
+                making](#p1-a-phase-of-exploratory-cocreative-game-making)
+            -   [DA: Development Stage](#da-development-stage)
+            -   [P2: Accelerated game making programme (5
+                weeks):](#p2-accelerated-game-making-programme-5-weeks)
             -   [P4: Adding a process drama to the game making
                 programme: April - May
                 2019](#p4-adding-a-process-drama-to-the-game-making-programme-april---may-2019)
+            -   [P4: Adapting to MakeCode Arcade and more formal
+                settings: Jan 2020 - September
+                2020](#p4-adapting-to-makecode-arcade-and-more-formal-settings-jan-2020---september-2020)
     -   [Analysis of dimensions of game making activity using 3GAT
         framework](#analysis-of-dimensions-of-game-making-activity-using-3gat-framework)
         -   [Environmental factors and
@@ -47,14 +52,13 @@ title: 4. Exploration of the Formative Learning Design Process
             -   [Applying activity theory to surface contradictions and
                 design tensions experienced by participants and
                 facilitator/s](#applying-activity-theory-to-surface-contradictions-and-design-tensions-experienced-by-participants-and-facilitators)
-    -   [Summative narrative description of evolution by
-        phaser](#summative-narrative-description-of-evolution-by-phaser)
-    -   [Contradictions involving the use of game programming and asset
-        authoring
-        tools](#contradictions-involving-the-use-of-game-programming-and-asset-authoring-tools)
-        -   [Situating tool use by phase](#situating-tool-use-by-phase)
-        -   [Narrative description of the area of
-            contradiction](#narrative-description-of-the-area-of-contradiction)
+    -   [Narrative exploration of
+        contradictions](#narrative-exploration-of-contradictions)
+    -   [C1 - contradictions involving the use of game programming and
+        asset authoring
+        tools](#c1---contradictions-involving-the-use-of-game-programming-and-asset-authoring-tools)
+        -   [Narrative descriptions of shifts from P1 to
+            P2](#narrative-descriptions-of-shifts-from-p1-to-p2)
         -   [Using a starter game
             template](#using-a-starter-game-template)
             -   [Variable editing for player
@@ -72,9 +76,9 @@ title: 4. Exploration of the Formative Learning Design Process
                 creation](#distributed-vs.-self-contained-approaches-to-asset-creation)
         -   [Observations on the game template and core
             tools](#observations-on-the-game-template-and-core-tools)
-    -   [Participant conflict associated with project navigation and use
-        of
-        documentation](#participant-conflict-associated-with-project-navigation-and-use-of-documentation)
+    -   [C2 - Participant conflict associated with project navigation
+        and use of
+        documentation](#c2---participant-conflict-associated-with-project-navigation-and-use-of-documentation)
         -   [Narrative pm the evolution of resources during
             P2](#narrative-pm-the-evolution-of-resources-during-p2)
         -   [Quick Start Cards](#quick-start-cards)
@@ -83,9 +87,9 @@ title: 4. Exploration of the Formative Learning Design Process
             chapters](#structuring-instructional-tutorial-chapters)
         -   [Theming the a collection of game design patterns to aid
             navigation](#theming-the-a-collection-of-game-design-patterns-to-aid-navigation)
-    -   [Responding to tensions and barriers in cultural aspects of the
-        game making
-        activity](#responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity)
+    -   [C3 - Responding to tensions and barriers in cultural aspects of
+        the game making
+        activity](#c3---responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity)
         -   [Design narrative on conflict due to identity clashes and
             dysfunctional group
             work](#design-narrative-on-conflict-due-to-identity-clashes-and-dysfunctional-group-work)
@@ -196,34 +200,52 @@ This section summarises phases of design.
 
 ### Phases and resources of the study
 
-
-
 More than a design the result was a dynamic community which is analysed on several scopes of activity.
-
-
-
-[Summary Table of Stages](https://docs.google.com/document/d/1tBoXJWw-aZUcc8EsAvT195CtHLSM468YOCD0sGzOuoA/edit#)
-see updated table in tables subdirectory  
-
 
 The following overview of activity use by stage focusing on the evolution of tools and processes concisely exploring the rationale for their selection or production. Fuller descriptions of the tools used at each stage and links to the online resources created are available as appendix 4.x
 
 NOTE - PERHAPS Move to appendix - But mention here.
 
-**Phase, Name and Date**| **Description** | **Starting Resources**         
-|--------|------------|--------------|
-|P1: Oct 2017 - Dec 2018; Experimental Course  | Participants started with no set plan or toolset and were asked to plan and make a game in two larger groups of 5-6 participants of mixed ages. After several weeks, a minimal incomplete starting game code template was introduced in response to student need.  Then One-off workshops at Mozilla and Feral Vector conferences and to PGCE computer students and the creation of a “half baked” game template |  Phaser 2.6.2 javascript library; Thimble code playground; online graphics editor Piskel; audio creation tools  |
-| P2: Jan - Feb 2019; Glitch Game Club | First iteration of game making course of 5-6 weeks. The template and resources created in the previous stage were used as a starting point but continued to evolve. |  Phaser; Glitch, Piskel; updated game template; quick start cards; step-by-step tutorials; code examples  |
+![](./Pictures/phases_diagram_chevrons.png){width=90%}
+
+Fig. 4.x Summary of delivery phases and development periods
+
+
+
+NOTE REPLACE THE TABLE WITH NARRATIVE TEXT USING THE TABLE CONTENTS AND THAT BELOW.
+THIS IS DESCRIPTIVE, INCLUDES TOOLS, AND PROCESSES BUT NO ANALYSIS, RATIONALE, OR TENSIONS
+
+[Summary Table of Stages](https://docs.google.com/document/d/1tBoXJWw-aZUcc8EsAvT195CtHLSM468YOCD0sGzOuoA/edit#)
+
+
+
+
+
+|   |   |
 | P3: May 2019; Glitch Game Club 2| Second iteration of game making course with additional drama and reflective elements |  As per P3; drama scenario; interactive chat page in glitch  |
 | P4: Jan 2020 - September 2020; Make Code Arcade | Two iterations of game making course of 5-6 weeks using MakeCode Arcade tool.  |  Make Code Arcade (MCA) tool; MCA Template starting game; MCA quick start cards; MCA game pattern menu; MCA game pattern tutorials; Learning Dimensions Map   |
 
 
-#### P1: Exploratory stage: Oct 2017 - Dec 2018
+#### P1: A phase of exploratory, cocreative game making
 
 <!-- NOTE - The evolution involves phases and then tension - what and how to cover both?  -->
 <!-- This phase took place before the official start of this research and relevant ethics application. As such,  -->
 
-Phase one was an extended, exploratory series of game making sessions over several months. This stage was aimed not at collecting user data rather than building my  competency as a facilitator. The process began with no pre-existing supporting materials. In response to need, I adapted a starting code template of a platform game and created various code examples to add functionality requested by participants. This template was adapted from an online tutorial to create a game of the _platformer_ genre  (see glossary), a move which helped to limit expectations of the technical complexity of their game. At the end of this stage participants showcased their games to students in the foyer of the MMU Brooks building. Generalised feedback from participants this stage included; a consensus that the process was too long; more guidance in the process of familiarising themselves the coding tools initially before undertaking ideation would be useful; group work was problematic given the lack of experience in this domain; and that the overall experience of working with code was difficult but rewarding (feedback notes are included as appendix 4.x). At the end of this phase I responded to this feedback and delivered three one-off workshops at conferences and community events. The compressed time frame sparked the use of new tools including a starting template and printable resources to accelerate the game-production process. The results in terms of engagement and impact on rapid personalisation of end products were very promising.
+
+**Participants started with no set plan or toolset and were asked to plan and make a game in two larger groups of 5-6 participants of mixed ages. After several weeks, a minimal incomplete starting game code template was introduced in response to student need.**
+
+
+Phase one was an extended, exploratory series of game making sessions over several months. This stage was aimed not at collecting user data rather than building my  competency as a facilitator. The process began with no pre-existing supporting materials. Several weeks in to the processs, a starting template adapated from a phaser community tutorial, used as to scaffold the production of games.  
+
+
+
+**Tools used:**
+|  Phaser 2.6.2 javascript library; Thimble code playground; online graphics editor Piskel; audio creation tools
+
+
+#### DA: Development Stage
+
+One-off workshops at Mozilla, Feral Vector and Manchester libraries events and to PGCE computer students helped focus and the creation of a “half baked” game template and supporting online and printable resources.
 
 <!-- The requirements of this compressed time frame aligned with feedback to prompt me to design an accelerated process to bump start the game-production process. -->
 
@@ -241,7 +263,10 @@ https://docs.google.com/document/d/1lk-8dHFFNbFXFtE5vV6_GHXYRzU7ATWZAIe-hNunyx8/
  -->
 
 <!-- #### The half-baked starting platformer game
+Participants started with no set plan or toolset and were asked to plan and make a game in two larger groups of 5-6 participants of mixed ages. After several weeks, a minimal incomplete starting game code template was introduced in response to student need.  
 
+
+Then One-off workshops at Mozilla and Feral Vector conferences and to PGCE computer students and the creation of a “half baked” game template |  Phaser 2.6.2 javascript library; Thimble code playground; online graphics editor Piskel; audio creation tools
 NOTE - ALSO EXPLORED IN NEXT CHAPTER - HOW TO ARRANGE?
 
 The use and design characteristics of the starting point of a half-baked game.
@@ -271,7 +296,10 @@ While some participants engaged with extensive experimentation to find a player 
 
 **Level design and prototyping**
 
-The starting game template included a minimal amount of platforms, hazards to avoid and golden blocks to collect. Image 4.x above show a printable _quick start_ cards to aid participants to begin the process of changing level design.
+The starting**Glitch Game Club**
+First iteration of game making course of 5-6 weeks. The template and resources created in the previous stage were used as a starting point but continued to evolve.
+**Tools:**
+ Phaser; Glitch, Piskel; updated game template; quick start cards; step-by-step tutorials; code examples   game template included a minimal amount of platforms, hazards to avoid and golden blocks to collect. Image 4.x above show a printable _quick start_ cards to aid participants to begin the process of changing level design.
 
 As preThe possibility of disturbing the syntax of the  of code in the array. When participant did this it provided a good opportunity for facilitators or parents to outline the importance of correct syntax of and to explain the code structure.
 
@@ -295,7 +323,13 @@ The concept of the feel of the game or the challenges maps to the Dynamics of MD
  -->
 
 
-#### P3: Accelerated game making programme (5 weeks): Jan - Feb 2019
+#### P2: Accelerated game making programme (5 weeks):
+
+**Glitch Game Club**
+First iteration of game making course of 5-6 weeks. The template and resources created in the previous stage were used as a starting point but continued to evolve.
+**Tools:**
+Phaser; Glitch, Piskel; updated game template; quick start cards; step-by-step tutorials; code examples  
+
 
 By the beginning of P2 most of the resources and activities were in place and relatively stable. There were some incremental evolutions in the template that stemmed from participant feedback and my reflections. Key additions at this stage to support the use of a template were a collection of tutorials and code examples illustrating key game features that had been requested by participants. The collection of game patterns were presented in a web page together with the starting template and a link to an online book collecting the process into step-by-step chapter based tutorials. The resources are explored in more depth in sections three and four below. A more complete description of the resources used in P2 and P3 are included in appendix 4.x.The experimental team consisted of Home Educating families . Learners acted as researcher participants to guide the next iteration of the game making program both directly and indirectly.
 
@@ -305,11 +339,11 @@ Direct input was through requests and informal feedback and structured end-of-co
 
 P3 used the same toolset as P2 however in addition, drew on my previous work with the MMU Faculty of Education drama department [@caldwell_drama_2019] to create a simple drama process to give an external motivation and narrative to the creation of games using for a fictional audience of visiting aliens. The participant activity of these stages and tensions between system elements are discussed in detail in the remainder of this chapter and in following chapters.
 
-<!-- #### P4: Adapting to MakeCode Arcade and more formal settings: Jan 2020 - September 2020
+#### P4: Adapting to MakeCode Arcade and more formal settings: Jan 2020 - September 2020
 
-I also adapted and advanced resources with an aim that they could be used within secondary classrooms to support computing curriculum. To do this I added a learning dimensions map, a process which is explored in a later section of this chapter. In 2019 MakeCode Arcade was launched to make games using for novice coders via the use of a block coding approach. In 2020 I ran two iterations of game making course using MakeCode Arcade. The facilitation techniques and approach were adapted from those of P2 to facilitate the use of the block coding language [^1]. Tool use at this stage is also explored in a chapter in a collection on K-12 computing education [@chesterman_game_2023].
+ In 2019 MakeCode Arcade was launched to make games using for novice coders via the use of a block cI also adapted and advanced resources with an aim that they could be used within secondary classrooms to support computing curriculum. To do this I added a learning dimensions map, a process which is explored in a later section of this chapter.oding approach. In 2020 I ran two iterations of game making course using MakeCode Arcade. The facilitation techniques and approach were adapted from those of P2 to facilitate the use of the block coding language [^1]. Tool use at this stage is also explored in a chapter in a collection on K-12 computing education [@chesterman_game_2023].
 
-This thesis draws for the most part on data from P2 and P3 and thus focuses on text-based coding as a primary method. -->
+I also adapted and advanced resources with an aim that they could be used within secondary classrooms to support computing curriculum. To do this I added a learning dimensions map, a process which is explored in a later section of this chapter.
 
 
 <!-- At this stage of writing I include a bullet point list of design relevant features to be expanded later.
@@ -334,9 +368,6 @@ Toby then decides he wants to add a new element to his game.
 He browses the list of game design patterns.
 There is a tension where he is hesitant about where to place code.
 Screen shot of the menu of choices. -->
-
-
-
 
 
 ## Analysis of dimensions of game making activity using 3GAT framework
@@ -384,7 +415,9 @@ Other relevant objectives of re include: a desire to create a useful learning ex
 
 ![Illustration 4.x - Broad Environmental Activity Systems  ](./Pictures/At_dia_3_v2.png){width=95%}
 
-In this research I take the approach of treating this shared object as an activity system in its own right. Lecusay takes a similar approach [@lecusay_telementoring_2015] and describes the shared object as an ideocultural hybrid which develops into its own activity system. The concept of ideoculture is used in this study  to deepen the description of the community dimension of 3GAT.
+In this research I take the approach of treating this shared object as an activity system in its own right. Lecusay takes a sim**Phase one:** In response to need, I adapted a starting code template of a platform game and created various code examples to add functionality requested by participants. This template was adapted from an online tutorial to create a game of the _platformer_ genre  (see glossary), a move which helped to limit expectations of the technical complexity of their game. At the end of this stage participants showcased their games to students in the foyer of the MMU Brooks building.
+
+ilar approach [@lecusay_telementoring_2015] and describes the shared object as an ideocultural hybrid which develops into its own activity system. The concept of ideoculture is used in this study  to deepen the description of the community dimension of 3GAT.
 
 <!-- NOTE - WHY IS THE CONCEPT OF IDEOCULTURE USEFUL HERE? -->
 
@@ -475,7 +508,9 @@ Table 4.x.  Tools used in mid-level objectives when selecting and planning imple
 
 ![Mid-level activity system of game making](./Pictures/At_dia_2_v1.png){width=95%}
 
-<!-- One observation from he experimental course was that without significant support, the process of making a game is complex and there are many possible blockages in the process. -->
+<!-- One observation from he experimental course was that without signific**Phase one:** In response to need, I adapted a starting code template of a platform game and created various code examples to add functionality requested by participants. This template was adapted from an online tutorial to create a game of the _platformer_ genre  (see glossary), a move which helped to limit expectations of the technical complexity of their game. At the end of this stage participants showcased their games to students in the foyer of the MMU Brooks building.
+
+ant support, the process of making a game is complex and there are many possible blockages in the process. -->
 
 <!-- NOTE - THIS IS ANALYSIS  -WHERE TO PLACE IT?
 By this stage, the process of collecting a user generated list of features and trying to respond to all of them as a facilitator had been abandoned as unrealistic. -->
@@ -606,7 +641,9 @@ The process of researching conceptions of agency has allowed me to align my intu
 
 <!-- - It may not be clear how teachers can best support the direction of learners - addressed by the map linked to the collection of GDP used to support and identify possible pathways. -->
 
-<!-- Systems concepts are embedded in many games but the process of direct teaching of such systems can be complex and interrupt and distract from other design activities. To address this I identified and highlighted systems related design patterns themed as challenge-related patterns to explore systems concepts within the game context. This approach mirrors work undertaken by Gary on Game Star Mechanic , where -->
+<!-- Systems concepts are embedded in many games but the process of direct teaching of such systems can be complex and interrupt and distract from other design activities. To address this I identified and highlighted systems related design patterns themed as challen**Phase one:** In response to need, I adapted a starting code template of a platform game and created various code examples to add functionality requested by participants. This template was adapted from an online tutorial to create a game of the _platformer_ genre  (see glossary), a move which helped to limit expectations of the technical complexity of their game. At the end of this stage participants showcased their games to students in the foyer of the MMU Brooks building.
+
+ge-related patterns to explore systems concepts within the game context. This approach mirrors work undertaken by Gary on Game Star Mechanic , where -->
 
 <!-- (outlined in Methods chapter -  use Schnell & GSM literature = their terminology is Game elements) -->
 
@@ -631,7 +668,9 @@ g Map and including Code Cards with links to online Concepts**
  Recap here the choice of coding concepts rather that CT in more abstract terms.
 
  - Make Code cards which contained links to game design patterns and the different component concepts
- - (see Eriksson and Bjork)
+ - (see Eriksson and Bjork)**Phase one:** In response to need, I adapted a starting code template of a platform game and created various code examples to add functionality requested by participants. This template was adapted from an online tutorial to create a game of the _platformer_ genre  (see glossary), a move which helped to limit expectations of the technical complexity of their game. At the end of this stage participants showcased their games to students in the foyer of the MMU Brooks building.
+
+
  - Draw on material and critique in chapter on semantic profiles / waves. -->
 
 
@@ -659,7 +698,11 @@ There were some additional changes in the way that design patterns were presente
 |----------------|------------------|
 |Facilitator stress if they are not able to support a very diverse set of features demanded by students working on diverse kinds of games.  | Limit the type of game to one kind. Offer a significant but limited menu of missions that users can add. Offer written and visual support documents which learners can access independently of facilitators|
 |  Facilitators may need to justify learning happening and struggle to see this in-situ if unfamiliar with the game making process. This may restrict openness of activities to better assess and support learning. | A map of learning dimensions flexibly linked to main missions/patterns can be used by both learners and facilitators.  |   |
-|  Challenges adapting resources to a curriculum environment |  There were some additional changes in the way that design patterns were presented to learners mirroring design patterns on other domains including: name; need ; related patterns. In addition related concepts in computational thinking and design processes which are promoted as part of the recent computing curriculum were included and linked to a learning dimensions map. |   
+|  Challenges adapting resources to a curriculum environment |  There were some additional changes in the way that design patterns were presented to learners mirroring design patterns on other domains including: name; need ; related patterns. In addition rel
+
+**Phase one:** In response to need, I adapted a starting code template of a platform game and created various code examples to add functionality requested by participants. This template was adapted from an online tutorial to create a game of the _platformer_ genre  (see glossary), a move which helped to limit expectations of the technical complexity of their game. At the end of this stage participants showcased their games to students in the foyer of the MMU Brooks building.
+
+ated concepts in computational thinking and design processes which are promoted as part of the recent computing curriculum were included and linked to a learning dimensions map. |   
 |Systems concepts are embedded in many games but the process of direct teaching of such systems can be complex and interrupt and distract from other design activities.   |  Systems related design patterns were identified and placed in a challenge themed section. Extra missions which highlight game challenge and user experience may help learners to explore systems concepts within the The later section of the vignette shows evidence of elements of an emerging ideoculture of this group. A student helper shares a question -  "Is yours the one where level one is harder than level three?". This is indicative of some of the emerging playful approaches that younger participants in particular are taking to the overall process. This represents an example of the influence of the wider systems of play of on the shared ideoculture of the game making commmunity. The complexities of processes to create adn to help resolve contradictions as this cultural domain of collective making are explored later in this chapter.
 game context. (outlined in Methods chapter -  use Schnell & GSM literature = their terminology is Game elements)|    -->
 
@@ -671,7 +714,11 @@ game context. (outlined in Methods chapter -  use Schnell & GSM literature = the
 <!-- While the use of these skills is not unique to game making and common to pick up on many making situations, the use of external image and sound asset creation tools which then creates production pipeline process does engender key navigation and importing and exporting skills which are very valuable in online environments. -->
 
 <!-- NOTE - The map could easily be changed to reflect this or other foci of teachers / researchers. -->
-<!-- A theme to follow up in the Maps / personal learning chapter is that of picking up on some of the behaviour of participants, especially that of experienced parents, experience either in coding practices of supporting their children. Once identified, how could beneficial interactions be encouraged in the next iteration of design.
+<!-- A theme to follow up in the Maps / personal learning chapter is that of picking up on some of the behaviour of participants, especially that of experienced parents,
+
+**Phase one:** In response to need, I adapted a starting code template of a platform game and created various code examples to add functionality requested by participants. This template was adapted from an online tutorial to create a game of the _platformer_ genre  (see glossary), a move which helped to limit expectations of the technical complexity of their game. At the end of this stage participants showcased their games to students in the foyer of the MMU Brooks building.
+
+ experience either in coding practices of supporting their children. Once identified, how could beneficial interactions be encouraged in the next iteration of design.
 
 Examples include;
 
@@ -681,21 +728,9 @@ Examples include;
 For example, the use of CT concepts in a framework, listed as part of the initial design pattern card, which could then be discussed, ticked off or otherwise reflected on. -->
 
 
-## Summative narrative description of evolution by phaser
+## Narrative exploration of contradictions
 
-I feel here a tension in communicating clearly and retaining some of the surprise of a narrative. I feel like this table tells the story too soon.  
-
-A similar table in the previous chapter table of phases this one is about tool and documentation use in particular. For completeness and data replicability, and as a practice of openly sharing educational resources. A fuller table in the appendix links to different online versions of documentation and tools uses. All are free and as based on web standards are unlikely to decay, a process that unfortunately occurs too often, making replicating or even investigating out of curiosity the tools used in may studies impossible.    
-
-**Phase, Name and Date**| **Description** | **Starting Resources**         
-|--------|------------|--------------
-|P1: Oct 2017 - Dec 2018; Experimental Course  | Participants started with no set plan or toolset and were asked to plan and make a game in two larger groups of 5-6 participants of mixed ages. After several weeks, a minimal incomplete starting game code template was introduced in response to student need.  Then One-off workshops at Mozilla and Feral Vector conferences and to PGCE computer students and the creation of a “half baked” game template |  Phaser 2.6.2 javascript library; Thimble code playground; online graphics editor Piskel; audio creation tools  |
-| P2: Jan - Feb 2019; Glitch Game Club | First iteration of game making course of 5-6 weeks. The template and resources created in the previous stage were used as a starting point but continued to evolve. |  Phaser; Glitch, Piskel; updated game template; quick start cards; step-by-step tutorials; code examples  |
-| P3: May 2019; Glitch Game Club 2| Second iteration of game making course with additional drama and reflective elements |  As per P3; drama scenario; interactive chat page in glitch  |
-| P4: Jan 2020 - September 2020; Make Code Arcade | Two iterations of game making course of 5-6 weeks using MakeCode Arcade tool.  |  Make Code Arcade (MCA) tool; MCA Template starting game; MCA quick start cards; MCA game pattern menu; MCA game pattern tutorials; Learning Dimensions Map   
-
-
-## Contradictions involving the use of game programming and asset authoring tools
+## C1 - contradictions involving the use of game programming and asset authoring tools
 
 **Addressing contradictions arising in use of coding tool use and game asset creation - often experienced as more individual level**
 
@@ -704,15 +739,23 @@ A similar table in the previous chapter table of phases this one is about tool a
 Activity theory has a broad definition of the concept of tool which in this context would include the use of language, concepts, supporting resources and production processes. While forms of documentation and supporting resources are explored in the following section, this section focuses on software tools and code framework used to create games in this program.    
 
 
-### Situating tool use by phase
-
-Insert table of tool use or link to this as an appendix.
 
 
+### Narrative descriptions of shifts from P1 to P2
 
 
-### Narrative description of the area of contradiction
-Contradictions arose between the need of participants to use key tools to create games and their lack of experience of them. Thus crux of the conflict is that coding games to create a webpage using a text environment is a complex process. In early stages, this gulf created a tension between the need to use the tools and text coding processes which often resulted in frustration and paralysis in the activity of game coding. While this is to be expected given the novice status of the participants, contextual factors complicate this contradiction further. For example, the process of helping participants build familiarity and competency in tool use was further complicated by my own motivations for working with as authentic as practical game authoring tools (explored in the introduction).
+Contradictions arose between the need of participants to use key tools to create games and their lack of experience of them. Thus crux of the conflict is that coding games to create a webpage using a text environment is a complex process.
+
+In early stages, this gulf created a tension between the need to use the tools and text coding processes which often resulted in frustration and paralysis in the activity of game coding.
+
+
+
+
+**Phase one:** In response to need, I adapted a starting code template of a platform game and created various code examples to add functionality requested by participants. This template was adapted from an online tutorial to create a game of the _platformer_ genre  (see glossary), a move which helped to limit expectations of the technical complexity of their game. At the end of this stage participants showcased their games to students in the foyer of the MMU Brooks building.
+
+
+
+While this is to be expected given the novice status of the participants, contextual factors complicate this contradiction further. For example, the process of helping participants build familiarity and competency in tool use was further complicated by my own motivations for working with as authentic as practical game authoring tools (explored in the introduction).
 
 While, gaps in knowledge and practice are commonly addressed in formal learning environments through forms of instruction, the informal nature of this learning setting encouraged me to prioritise approaches which avoided written or to whole class instruction. My motivations here were also supported by experiences in P1 documented in my journal. I found attempts to convene attention on a presentation screen for instruction based teaching to class uncomfortable, stemming from my judgement that these interventions to be unwelcome interruptions for the participants making activities.  
 
@@ -1144,7 +1187,7 @@ DEVELOP THIS SECTION -->
 
 
 
-## Participant conflict associated with project navigation and use of documentation
+## C2 - Participant conflict associated with project navigation and use of documentation
 
 **- Contradictions associated with project navigation and the use of supporting documentation - interpreted here through the lens of guided participation**
 
@@ -1291,12 +1334,7 @@ My journal notes see an evolution of attempts to try to build into the program, 
 An additional rationale for this process was to help reduce potential internal bias about the kind of process that a computer programmer should adopt, echoing the call for pluralism in approaches explored earlier in our section on germ cell concept Papert and Turkle, 1990). In short, my message was to participants there are more than one way the skin a cat. When you are learning to code follow your own preferences and try to observe and reflect on what works well for you. -->
 
 
-
-
-## Responding to tensions and barriers in cultural aspects of the game making activity
-
-
-
+## C3 - Responding to tensions and barriers in cultural aspects of the game making activity
 
 **Narrative summary of conflict:**
 
@@ -1320,11 +1358,13 @@ When the family withdrew, in my journal notes I reflected that the they shared o
 
 When the family withdrew, they shared in feedback (see appendix 4.x) the moment that decided their withdrawal. that at one point they "looked around and just saw people doing hardcore coding and no longer felt that they belonged". In the end stages of the game production process, due to the dynamic of the larger group, they were reliant on others to implement code changes for their imagined game, unable to contribute fully at this point and found themselves isolated. Thus a contributing factor to this families alienation were tensions engendered by the large group size and compounded by frustrations stemming from unfamiliarity with tools and processes. In participant feedback, the  parent of this family described in the previous section indicated that it took too long before in the planning stage and called for more hands on play and use of the tools of production before being called on to make creative decisions. The parent likened this to an arts studio approach. This feedback contributed to choices outlined in other sections of this chapter. (WHICH ONES)
 
-Some barriers stemming from alienation from participant group working processes were resolved partly by freeing up some patterns of collaboration and interaction and removing others.
+Some barriers stemming from alienation from participant group workin
+g processes were resolved partly by freeing up some patterns of collaboration and interaction and removing others.
 
 The process of parents getting in the way of children's not minding jumping in and invading social space struck me. Together with the frustrations of complexities of larger group work the restrictions created a tension between the suggested community norm of how division of labour was organised.
 
 Thus in P2, rather than the larger groups of P1, smaller groups, allowing some children to work by themselves and others with parents. Avoiding large group fragmentation and encouraging freedom of participation vs benefiting from parental involvement.
+
 
 P2 introduced some of the changes
 - Keeping games working to allow for less frustation - this promoted more playtestin time. explored next.
@@ -1346,7 +1386,8 @@ The incident lead me to greater reflection on ongoing measures needed to prevent
 
 <!-- **Participants stuck / demotivated : scope of ambition to high,  clashes of identity not hard core coders, no on-going playtesting, collaboration groups too big (transition),**
 
-For some families and individual participants there were conflicts to do with a sense of anxiety and alienation from the group coding environment and associated peer working dynamics.
+For some families and individual participants there were conflicts to do with a sense of anxiety and alienation fr
+om the group coding environment and associated peer working dynamics.
 
 One family dropped out and in their exit interview they shared that at one point we looked around and just saw people doing hardcore coding and we no longer felt at home in the environment. In this emergent design, they had mostly completed asset design and narrative development and the only coding remained. I thus wanted to address the tension between completing the project and alienation from just coding.
 
