--- a/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
@@ -9,14 +9,17 @@
             design](#on-the-details-of-the-design)
         -   [Phases and resources of the
             study](#phases-and-resources-of-the-study)
-            -   [P1: Exploratory stage: Oct 2017 - Dec
-                2018](#p1-exploratory-stage-oct-2017---dec-2018)
-            -   [P3: Accelerated game making programme (5 weeks): Jan -
-                Feb
-                2019](#p3-accelerated-game-making-programme-5-weeks-jan---feb-2019)
+            -   [P1: A phase of exploratory, cocreative game
+                making](#p1-a-phase-of-exploratory-cocreative-game-making)
+            -   [DA: Development Stage](#da-development-stage)
+            -   [P2: Accelerated game making programme (5
+                weeks):](#p2-accelerated-game-making-programme-5-weeks)
             -   [P4: Adding a process drama to the game making
                 programme: April - May
                 2019](#p4-adding-a-process-drama-to-the-game-making-programme-april---may-2019)
+            -   [P4: Adapting to MakeCode Arcade and more formal
+                settings: Jan 2020 - September
+                2020](#p4-adapting-to-makecode-arcade-and-more-formal-settings-jan-2020---september-2020)
     -   [Analysis of dimensions of game making activity using 3GAT
         framework](#analysis-of-dimensions-of-game-making-activity-using-3gat-framework)
         -   [Environmental factors and
@@ -35,14 +38,13 @@
             -   [Applying activity theory to surface contradictions and
                 design tensions experienced by participants and
                 facilitator/s](#applying-activity-theory-to-surface-contradictions-and-design-tensions-experienced-by-participants-and-facilitators)
-    -   [Summative narrative description of evolution by
-        phaser](#summative-narrative-description-of-evolution-by-phaser)
-    -   [Contradictions involving the use of game programming and asset
-        authoring
-        tools](#contradictions-involving-the-use-of-game-programming-and-asset-authoring-tools)
-        -   [Situating tool use by phase](#situating-tool-use-by-phase)
-        -   [Narrative description of the area of
-            contradiction](#narrative-description-of-the-area-of-contradiction)
+    -   [Narrative exploration of
+        contradictions](#narrative-exploration-of-contradictions)
+    -   [C1 - contradictions involving the use of game programming and
+        asset authoring
+        tools](#c1---contradictions-involving-the-use-of-game-programming-and-asset-authoring-tools)
+        -   [Narrative descriptions of shifts from P1 to
+            P2](#narrative-descriptions-of-shifts-from-p1-to-p2)
         -   [Using a starter game
             template](#using-a-starter-game-template)
             -   [Variable editing for player
@@ -60,9 +62,9 @@
                 creation](#distributed-vs.-self-contained-approaches-to-asset-creation)
         -   [Observations on the game template and core
             tools](#observations-on-the-game-template-and-core-tools)
-    -   [Participant conflict associated with project navigation and use
-        of
-        documentation](#participant-conflict-associated-with-project-navigation-and-use-of-documentation)
+    -   [C2 - Participant conflict associated with project navigation
+        and use of
+        documentation](#c2---participant-conflict-associated-with-project-navigation-and-use-of-documentation)
         -   [Narrative pm the evolution of resources during
             P2](#narrative-pm-the-evolution-of-resources-during-p2)
         -   [Quick Start Cards](#quick-start-cards)
@@ -71,9 +73,9 @@
             chapters](#structuring-instructional-tutorial-chapters)
         -   [Theming the a collection of game design patterns to aid
             navigation](#theming-the-a-collection-of-game-design-patterns-to-aid-navigation)
-    -   [Responding to tensions and barriers in cultural aspects of the
-        game making
-        activity](#responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity)
+    -   [C3 - Responding to tensions and barriers in cultural aspects of
+        the game making
+        activity](#c3---responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity)
         -   [Design narrative on conflict due to identity clashes and
             dysfunctional group
             work](#design-narrative-on-conflict-due-to-identity-clashes-and-dysfunctional-group-work)
